# CudaVideoFiltering

./: .gitignore  CMakeLists.txt  README.md
src/: CuDecode.cpp  CuDecode.hpp  ImageProcessing.cpp  ImageProcessing.h  MP4Muxer.cpp  MP4Muxer.hpp  MkvMuxer.cpp  MkvMuxer.hpp  NVDecoder.hpp  NVEncoder.cpp  NVEncoder.hpp  cuda_iface.hpp  libs.h  main1.cpp  prewitt_cuda.cu  util.cpp  util.hpp
